# lifeos

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  BUILD.md  CLAUDE.md  Dockerfile.test  GUARDRAILS.md  SESSION-LOG.md  SPEC.md  package-lock.json  package.json  pyproject.toml  scale-metrics.json  scaledata_300326.xlsx
.claude/: project.env.example  settings.json
.claude/hooks/: _python.sh  block-main.sh  check-spec.sh  post-tool-failure.sh  pre-tool-summary.sh  run-tests.sh  stop-check.sh  sync-template.sh
.github/workflows/: ci.yml  deploy.yml  staging-down.yml  staging-up.yml
.husky/: pre-commit
config-examples/: nginx-lifeos.conf
container/: Dockerfile
container/mcp-servers/: google-calendar.mjs  motherduck.mjs
docs/: CONTAINER-MCP.md  MIGRATION-WASM.md
groups/discord_activity-log/: CLAUDE.md
groups/discord_email-digest/: CLAUDE.md
groups/discord_health/: CLAUDE.md
groups/discord_meals/: CLAUDE.md
groups/discord_reminders/: CLAUDE.md
groups/global/: CLAUDE.md
groups/main/: CLAUDE.md
pwa/: .env.example  package-lock.json  package.json  svelte.config.js  vite.config.ts
pwa/scripts/: generate-icons.mjs
pwa/src/: app.css  app.html  service-worker.ts
pwa/static/: manifest.json
scripts/: bill-tracker.py  coop-login.mjs  coop-session.json  copy-supplements.mjs  import-samsung-health.mjs  obsidian-sync.py  seed-recipes.sql  setup-agent-teams.sh  setup-tasks.test.ts  setup-tasks.ts  test_bill_tracker.py  test_grocery.py  test_obsidian_sync.py  test_vacuum_control.py  test_wyze_control.py  vacuum-control.py  wyze-control.py
scripts/grocery/: coop-cart.py
scripts/motherduck/: migrate.test.ts  migrate.ts  run-migrations.cjs
scripts/tasks/: bill-check.sh  pantry-expiry-check.sh  reminder-check.sh  steps-check.sh
src/: container-runner.ts  db.ts  gmail-mcp-config.ts  index.ts  ipc.ts  task-scheduler.test.ts  task-scheduler.ts  types.ts
src/api/: db.test.ts  db.ts  server.test.ts  server.ts
src/channels/: discord.test.ts  discord.ts  gmail.test.ts  gmail.ts  index.ts
src/integrations/: google-calendar.test.ts  google-calendar.ts  motherduck.test.ts  (+1 more)
tests/: run_in_docker.sh
(+133 files in other folders)
