[project]
name = "lifeos-scripts"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "wyze-sdk>=2.2.0",
    "tinytuya>=1.13.0",
    "playwright>=1.40.0",
    "gitpython>=3.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long -- ruff format handles this
    "B008",  # do not perform function calls in default arguments (FastAPI uses this)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests", "scripts"]
markers = [
    "integration: marks tests that connect to real external services",
]

[tool.sqlfluff.core]
dialect = "ansi"   # override per project: duckdb, postgres, bigquery, etc.
max_line_length = 100
